# dotfiles

./: .age.pub  .cargo_vcs_info.json  .envrc  .gitattributes  .gitignore  .gitmodules  .links.toml  .sops.yaml  .tmux.conf  .tmux.conf.local  .zshrc  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXTERNAL_LICENCES  Justfile  LICENSE  README.adoc  README.md  SketchyBar  backup2.sh  build_log.txt  default.nix  desktoppr.nix  encrypted.age  fetch  file.json  files-to-convert.md  flake-module.nix  flake.nix  generated.json  generated.nix  htpassword  inputs.nix  install.sh  install_desktop.sh  install_mac.sh  kanata.kbd  makeComment.sh  (+19 more)
.config/: alacritty.yml  starship.toml
.config/awesome/: .gitignore  fennel.lua  rc.lua
.config/dunst/: dunst  dunstrc
.config/fish/: config.fish  fish_variables
.config/fontconfig/: fonts.conf
.config/nitrogen/: bg-saved.cfg  nitrogen.cfg
.config/nixos/: alacritty.nix  coc.vim  home.nix  rice.nix
.config/nixpkgs/: alacritty.nix  alacritty.nix~  animate.vim  coc.vim  emacs.nix  eww.nix  haskell.nix  home.nix  home.nix~  init.vim  picom.nix  polybar.nix  powercord.nix  st.nix  (+5 more)
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.emacs.d/: .gitignore  .lsp-session-v1  ido.last  init.el  init.el~  pink-ocean-theme.el
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.xmonad/: polybar.sh  screenshot-sec.sh  sh  statusbar.py  xmonad.hs
_sources/: generated.json  generated.nix
apps/: generate.nix  rekey.nix
apt/: downloaded
arch/: arch.sh  aur_packages  sync_packages
archinstall/: arch-install2.py
aspects/: README.md  patch-ldflags.nix  phoebelyrics.nix  storage.nix  test-fix.nix
ci/: default.nix
crates/nh/: Cargo.toml
crates/nh-clean/: Cargo.toml
crates/nh-clean/src/: args.rs  clean.rs
crates/nh-core/: Cargo.toml
crates/nh-core/src/: args.rs  checks.rs  command.rs  installable.rs  json.rs  lib.rs  update.rs  util.rs
crates/nh-home/: Cargo.toml
crates/nh-home/src/: args.rs  home.rs
crates/nh-nixos/: Cargo.toml
crates/nh-nixos/src/: args.rs  generations.rs  lib.rs  nixos.rs
crates/nh-remote/: Cargo.toml
crates/nh-remote/src/: remote.rs
crates/nh-search/: Cargo.toml
crates/nh-search/src/: args.rs  search.rs
crates/nh/src/: interface.rs  lib.rs  logging.rs  main.rs
dev/: flake.nix  imports.nix
docs/: README.md  README.md.mustache  default.nix
flake/: apps.nix  builders.nix  ci.nix  default.nix  den.nix  formatter.nix  homes.nix  input-branches.nix  lib.nix  nixvim.nix  packages.nix  secrets.nix  shells.nix  systems.nix  templates.nix  vpn.nix
fonts/: .uuid
hm/: arch.nix  default.nix  hyprland.nix  laptop.nix  mac.nix  nixos.nix  nixos2.nix  picom.nix  secrets.nix  standalone.nix  term.nix  ui.nix  yabai.nix
hooks/: refind.hook
kernel/: .config
keybind_program/: default.nix  definition_document.md  lib.nix
keys/: builder_ed25519  builder_ed25519.pub
lib/: default.nix  extra.nix  file.nix  groupConfig.nix  overlay.nix  tmpfiles.nix
libs/: fennel.lua  lume.lua
modules/: 1password.nix  age-home.nix  age.nix  agenix-rekey.nix  apps.nix  common.nix  darwin.nix  docs.nix  external.nix  features.nix  flake-module.nix  formatter.nix  general.nix  git-module.nix  hm.nix  homebrew.nix  homes.nix  input-branches.nix  jj-module.nix  keybinds.nix  module-list.nix  modules.nix  nix-builds.nix  nixos-module.nix  overlays.nix  packages.nix  pia.nix  secrets-config.nix  secrets.nix  ssh.nix  systems.nix
nixos/: atticd.nix
nixos-config/: .links.toml  flake.nix  pink_ocean.yml  result  smb-secrets
nixvim/: default.nix  lsp.nix
nvim/: .netrwhist  init.vim
overlays/: default.nix  difftastic-patch  gpg.patch  kanata-patch  literal.nix
patches/: hashes.json
phoebelyrics/: Lyrics_PhoebeBridgers.json  lyricslist  parse.js  python.py
polybar/: .config.swp  config
portage/: make.conf  make.conf~  package.license  world
rice/: .Xresources  .xinitrc
scripts/: refind-next-boot
secrets/: access-tokens.age  attickey.age  backblaze.age  cachix_auth_token.age  claude_token.age  default.yaml  github_token.age  ivy-password.age  ivy-pwd-hash.age  password.age  pia_privatekey.age  pia_vpn.age  secrets.nix  slsk_creds.env.age  spotify_api.age  test.age  wakatime_api.age  wakatime_config.age
shells/: agda.nix
sketchybar/: bar.lua  colors.lua  default.lua  icons.lua  settings.lua  sketchybarrc
src/: main.rs  stanza.rs
st/: config.def.h  x.c
static/: flake.nix
systems/: default.nix
tests/: default.nix  environment-terminfo.nix  homebrew-cleanup-check.nix  homebrew-shell-integration.nix  homebrew.nix  networking-firewall.nix  networking-hostname.nix  networking-networkservices-no-dhcp-client-id.nix  networking-networkservices.nix  programs-gnupg.nix  programs-zsh.nix  services-aerospace.nix  services-dnsmasq.nix  services-github-runners.nix  services-openssh.nix  system-defaults-write.nix
windows/: install_neovim.ps1  winget_packages.json
xmonad/: .gitignore  build_laptop  flake.nix  my-xmonad.cabal  my-xmonad.nix  stack.yaml  xmonad.nix
xmonad-config/: .gitignore  README.md  bar.hs  build  build_desktop  my-xmonad.cabal  screenshot-sec.sh  stack.yaml
xmonad-config/lib/: AusPrompt.hs  Config.hs  Desktop.hs  DynamicLog.hs  Eww.hs  ExtraState.hs  Laptop.hs  Media.hs  Polybar.hs  StackSetLens.hs  SysDependent.hs  WorkspaceSet.hs  bar.hs  dbus  xmobar.hs  xmonad.hs  xmonadctl.hs  xmonadoutput.hs
xmonad/lib/: #Config.hs#  AusPrompt.hs  Config.dyn_hi  Config.dyn_o  Config.hi  Config.hs  Dbus.hs  DynamicLog.dyn_hi  DynamicLog.dyn_o  DynamicLog.hi  DynamicLog.hs  ExtraState.dyn_hi  ExtraState.dyn_o  ExtraState.hi  ExtraState.hs  Media.dyn_hi  Media.dyn_o  Media.hi  Media.hs  Polybar.dyn_hi  Polybar.dyn_o  Polybar.hi  Polybar.hs  StackSetLens.hs  SysDependent.dyn_hi  SysDependent.dyn_o  SysDependent.hi  SysDependent.hs  WorkspaceSet.dyn_hi  WorkspaceSet.dyn_o  WorkspaceSet.hi  WorkspaceSet.hs  bar.hi  bar.hs  bob.pl  fileName.tmp  list.hs
xtask/: Cargo.toml
xtask/src/: comp.rs  main.rs  man.rs
(+2237 files in other folders)
