name:                my-xmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             ../xmonad.hs
  -- other-modules lists custom modules in my ~/.xmonad/lib/ directory
  other-modules: WorkspaceSet, DynamicLog, Config,StackSetLens,Polybar, ExtraState, Media, SysDependent
  build-depends:       base
                     , xmonad >= 0.13
                     , xmonad-contrib >= 0.13
		     , containers
	   	     , dbus
		     , utf8-string
		     , microlens
		     , microlens-th
  hs-source-dirs:      lib
  default-language:    Haskell2010
--  ghc-options:         -Wall -Werror -fno-warn-missing-signatures -threaded
executable media-bar
  main-is:  bar.hs
  hs-source-dirs: lib
  other-modules: Polybar
  build-depends: base, X11, dbus, xmonad, xmonad-contrib, containers, process
