[package]
name              = "xtask"
version.workspace = true
edition.workspace = true
publish           = false

[dependencies]
clap.workspace                  = true
clap_complete.workspace         = true
clap_complete_nushell.workspace = true
clap_mangen.workspace           = true
nh.workspace                    = true
roff.workspace                  = true
