[package]
name                   = "nh-home"
version                = "0.1.0"
publish                = false
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
path = "src/home.rs"

[dependencies]
clap.workspace       = true
color-eyre.workspace = true
inquire.workspace    = true
nh-core.workspace    = true
nh-remote.workspace  = true
tempfile.workspace   = true
tracing.workspace    = true
