[package]
name                   = "nh-nixos"
version                = "0.1.0"
publish                = false
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace     = true
clap.workspace       = true
color-eyre.workspace = true
inquire.workspace    = true
nh-core.workspace    = true
nh-remote.workspace  = true
nix.workspace        = true
serde_json.workspace = true
tempfile.workspace   = true
tracing.workspace    = true
