[package]
name                   = "nh-search"
version                = "0.1.0"
publish                = false
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[lints]
workspace = true


[lib]
path = "src/search.rs"

[dependencies]
clap.workspace                = true
color-eyre.workspace          = true
elasticsearch-dsl.workspace   = true
regex.workspace               = true
reqwest.workspace             = true
serde.workspace               = true
serde_json.workspace          = true
supports-hyperlinks.workspace = true
textwrap.workspace            = true
tracing.workspace             = true
yansi.workspace               = true
